log/build_2026-03-27_15-38-11/turtle_lidar/stderr.log
  File "/home/kyujin/lidar_ws/src/install/turtle_lidar/lib/python3.10/site-packages/turtle_lidar/lidar_publisher.py", line 17
    "CLEAR_PATH":  {"center": 0, "width": 0, "dist": 3.5} 음
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

